kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easy-rstudio-user-default-deployment
  namespace: easy-rstudio
spec:
  selector:
    matchLabels:
      app: easy-rstudio
  replicas: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: easy-rstudio
        user: default
    spec:
      containers:
      - name: easy-rstudio-container
        image: rocker/rstudio
        ports:
        - containerPort: 8787
