kubernetes/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: easy-rstudio-pod
  labels:
    app: easy-rstudio
spec:
  containers:
  - name: easy-rstudio-container
    image: rocker/rstudio
    ports:
    - containerPort: 8787
