kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: easy-rstudio-user-default-service
  namespace: easy-rstudio
spec:
  selector:
    app: easy-rstudio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8787
